content/vault/v2.x/content/docs/secrets/identity/index.mdx
---
layout: docs
page_title: Identity secrets engine
description: >- 
   Manage Vault client identities with the identity secrets engine. An entity represents a unique client which can have multiple aliases tied back to it.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:15:42.000Z
last_modified: 2026-04-15T00:15:42.000Z
# END AUTO GENERATED METADATA
---

# Identity secrets engine

The identity secrets engine is the identity management solution for Vault. It
internally maintains the clients who are recognized by Vault. Each client is
internally termed as an `Entity`. An entity can have multiple `Aliases`. For
example, a single user who has accounts in both GitHub and LDAP, can be mapped
to a single entity in Vault that has 2 aliases, one of type GitHub and one of
type LDAP. When a client authenticates successfully via any of the credential backends
(except the Token backend), Vault creates a new entity and attaches a new
alias to it, if a corresponding entity doesn't already exist. The entity identifier will
be tied to the authenticated token. When such tokens are put to use, their
entity identifiers are audit logged, marking a trail of actions performed by
specific users.

Identity store allows operators to **manage** the entities in Vault. Entities
can be created and aliases can be tied to entities, via the ACL'd API. There
can be policies set on the entities which adds capabilities to the tokens that
are tied to entity identifiers. The capabilities granted to tokens via the
entities are **an addition** to the existing capabilities of the token and
**not** a replacement. The capabilities of the token that get inherited from
entities are computed dynamically at request time. This provides flexibility in
controlling the access of tokens that are already issued.

~> **NOTE:** This secrets engine will be mounted by default. This secrets engine
cannot be disabled or moved. For more conceptual overview on identity, refer to
the [Identity](/vault/docs/concepts/identity) documentation.

The Vault Identity secrets engine supports several different features. Each
one is individually documented on its own page.

- [SCIM API guide](/vault/docs/enterprise/scim-overview)
- [Identity tokens](/vault/docs/secrets/identity/identity-token)
- [OIDC Identity Provider](/vault/docs/secrets/identity/oidc-provider)

Vault Enterprise also supports beta SCIM provisioning to create and manage
identity entities and internal groups from external identity platforms. Refer
to the [SCIM API guide](/vault/docs/enterprise/scim-overview) for setup,
authentication, and operational details.

## API

The Identity secrets engine has a full HTTP API. Please see the
[Identity secrets engine API](/vault/api-docs/secret/identity) for more
details.

Additionally, Vault can be configured as an OIDC identity provider. Please see
the [OIDC identity provider API](/vault/api-docs/secret/identity/oidc-provider) for
more details.

Vault Enterprise also exposes a
[SCIM API](/vault/api-docs/secret/identity/scim) for SCIM client configuration
and SCIM user and group provisioning.

## Terraform

You can manage identity secret resources programmatically with the Vault Terraform provider. Refer to the Terraform Registry documentation for more details:

- [Identity entity resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_entity)
- [Identity entity alias resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_entity_alias)
- [Identity entity policies resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_entity_policies)
- [Identity group resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_group)
- [Identity group alias resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_group_alias)
- [Identity group member entity IDs resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_group_member_entity_ids)
- [Identity group member group IDs resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_group_member_group_ids)
- [Identity group policies resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_group_policies)
- [Identity OIDC backend resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc)
- [Identity OIDC assignment resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_assignment)
- [Identity OIDC client resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_client)
- [Identity OIDC key resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_key)
- [Identity OIDC key allowed client ID resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_key_allowed_client_id)
- [Identity OIDC provider resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_provider)
- [Identity OIDC role resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_role)
- [Identity OIDC scope resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/identity_oidc_scope)
